homework2 corrigido (ENDPOINTS EXTRA)